--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
-  "name": "",
-  "version": "",
+  "name": "stayreservation",
+  "version": "1.0.0",
   "description": "",
-  "author": "",
+  "author": "Natalie",
   "license": "",
   "engines": {
     "node": ">=6.13.0"
   },
   "scripts": {
+    "start": "npx nodemon server/index.js --watch",
+    "build": "webpack --config webpack.config.js --watch",
+    "emptydb": "mysql -u root < server/database/schema.sql",
+    "seed": "mysql -u root < server/database/seed.sql"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "7.5.5",
+    "@babel/preset-react": "7.0.0",
+    "axios": "0.19.0",
+    "babel-loader": "8.0.6",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "express": "4.17.1",
+    "moment": "2.24.0",
+    "mysql": "2.17.1",
+    "nodemon": "1.19.1",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "sequelize": "5.13.1",
+    "webpack": "4.39.1",
+    "webpack-cli": "^3.3.7"
   }
 }
