--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "npx nodemon server/index.js --watch",
     "build": "webpack --config webpack.config.js --watch",
     "emptydb": "mysql -u root < server/database/schema.sql",
-    "seed": "mysql -u root < server/database/seed.sql"
+    "seed": "mysql -u root < server/database/seed.sql",
+    "test": "jest"
   },
   "dependencies": {},
   "devDependencies": {
@@ -20,8 +21,15 @@
     "@babel/preset-react": "7.0.0",
     "axios": "0.19.0",
     "babel-loader": "8.0.6",
+    "eslint": "^6.2.1",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "express": "4.17.1",
+    "jest": "^24.9.0",
     "moment": "2.24.0",
     "mysql": "2.17.1",
     "nodemon": "1.19.1",
