--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "express": "4.17.1",
+    "file-loader": "^4.2.0",
     "jest": "^24.9.0",
     "moment": "2.24.0",
     "mysql": "2.17.1",
