--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "express": "4.17.1",
     "mysql": "2.17.1",
     "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "styled-components": "^4.3.2"
+    "react-dom": "16.9.0"
   },
   "devDependencies": {
+    "styled-components": "^4.3.2",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
